--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@lunaticenslaved/schema",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
+    "build": "rm -rf /dist && tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
     "lint": "eslint --fix --max-warnings=0 . && prettier . --write"
   },
   "author": "lunaticenslaved",
