--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lunaticenslaved/schema",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "publishConfig": {
@@ -19,7 +19,6 @@
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/express": "^4.17.21",
-    "@types/express-fileupload": "^1.4.4",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
@@ -29,7 +28,6 @@
     "typescript": "5.1"
   },
   "peerDependencies": {
-    "express": "^4.18.2",
-    "express-fileupload": "^1.4.2"
+    "express": "^4.18.2"
   }
 }
