--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@lunaticenslaved/schema",
-  "version": "0.0.17",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "version": "0.0.18",
+  "main": "dist/esm/main.js",
+  "types": "dist/esm/main.d.ts",
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
-    "build": "rm -rf /dist && tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
+    "build": "rm -rf dist && tsc --noEmit && npx rollup --config rollup.config.mjs",
     "lint": "eslint --fix --max-warnings=0 . && prettier . --write"
   },
   "author": "lunaticenslaved",
@@ -18,18 +18,28 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^5.0.1",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/express": "^4.17.21",
-    "@types/lodash": "^4.14.201",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "prettier": "^3.0.3",
-    "tsc-alias": "^1.8.8",
+    "rollup": "^4.5.0",
+    "rollup-plugin-bundle-size": "^1.0.3",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-node-externals": "^6.1.2",
     "typescript": "5.1"
   },
   "peerDependencies": {
+    "@types/lodash": "^4.14.201",
     "express": "^4.18.2"
   }
 }
