--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,44 +1,20 @@
 {
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "target": "ESNext",
     "lib": ["esnext"],
-    "allowJs": false,
-    "skipLibCheck": false,
-    "sourceMap": true,
-    "composite": false,
-    "declaration": true,
-    "declarationMap": true,
+    "sourceMap": false,
+    "declaration": false,
+    "declarationMap": false,
 
     /* Bundler mode */
-    "useDefineForClassFields": false,
-    "esModuleInterop": true,
     "types": ["node"],
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "emitDecoratorMetadata": true,
-
-    /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitOverride": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
-    "forceConsistentCasingInFileNames": true,
-
-    /* Language features */
-    "experimentalDecorators": true,
+    "module": "ES2015",
+    "moduleResolution": "Bundler",
 
     /* Paths */
     "outDir": "./dist",
-    "rootDir": ".",
-    "baseUrl": ".",
-    "paths": {
-      "#/*": ["./src/*"]
-    }
+    "rootDir": "./src"
   },
-  "include": ["src", "./index.ts"]
+  "include": ["src"]
 }
