--- a/package.json
+++ b/package.json
@@ -1,10 +1,29 @@
 {
   "name": "@lunaticenslaved/schema",
-  "version": "0.0.18",
-  "main": "dist/esm/main.js",
-  "types": "dist/esm/main.d.ts",
+  "version": "0.0.20",
+  "main": "dist/umd/main.js",
+  "types": "dist/umd/main.d.ts",
   "publishConfig": {
     "access": "public"
+  },
+  "exports": {
+    ".": {
+      "types": {
+        "require": "./dist/umd/main.d.ts",
+        "default": "./dist/umd/main.d.ts"
+      },
+      "browser": {
+        "require": "./dist/browser/main.cjs",
+        "default": "./dist/browser/main.cjs"
+      },
+      "default": {
+        "require": "./dist/node/main.cjs",
+        "default": "./dist/node/main.cjs"
+      }
+    },
+    "./.prettierrc.js": "./.prettierrc.js",
+    "./.eslintrc.js": "./.eslintrc.js",
+    "./tsconfig.base.json": "./tsconfig.base.json"
   },
   "scripts": {
     "build": "rm -rf dist && tsc --noEmit && npx rollup --config rollup.config.mjs",
@@ -21,25 +40,25 @@
     "@rollup/plugin-alias": "^5.0.1",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-json": "^6.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.5",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.14.201",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "prettier": "^3.0.3",
     "rollup": "^4.5.0",
+    "rollup-plugin-alias": "^2.2.0",
     "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-copy": "^3.5.0",
-    "rollup-plugin-node-externals": "^6.1.2",
+    "tsc-alias": "^1.8.8",
     "typescript": "5.1"
   },
   "peerDependencies": {
-    "@types/lodash": "^4.14.201",
     "express": "^4.18.2"
   }
 }
