--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "prettier": "^3.0.3",
     "rollup": "^4.5.0",
     "rollup-plugin-alias": "^2.2.0",
