--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lunaticenslaved/schema",
-  "version": "0.0.24",
+  "version": "0.0.26",
   "main": "dist/umd/main.js",
   "types": "dist/umd/main.d.ts",
   "publishConfig": {
@@ -33,7 +33,6 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.1",
-    "lodash": "^4.17.21",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -64,6 +63,6 @@
     "typescript": "5.1"
   },
   "peerDependencies": {
-    "express": "^4.18.2"
+    "lodash": "^4.17.21"
   }
 }
