--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.base.json",
+  "extends": "./node_modules/@lunaticenslaved/configs/tsconfig.base.json",
   "compilerOptions": {
     "target": "ESNext",
     "lib": ["esnext"],
