--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lunaticenslaved/schema",
-  "version": "0.0.39",
+  "version": "0.0.40",
   "main": "dist/umd/main.js",
   "types": "dist/umd/main.d.ts",
   "publishConfig": {
@@ -35,13 +35,15 @@
     }
   },
   "scripts": {
-    "build": "rm -rf dist && tsc --noEmit && npx rollup --config rollup.config.mjs",
+    "build": "rm -rf dist && npx rollup --config rollup.config.mjs",
+    "publish": "node scripts/publish.js",
     "lint:fix": "eslint --fix --max-warnings=0 . && prettier . --write"
   },
   "author": "lunaticenslaved",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.1",
+    "lodash": "^4.17.21",
     "to-querystring": "^1.2.0",
     "zod": "^3.22.4"
   },
@@ -59,6 +61,7 @@
     "@types/express": "^4.17.21",
     "@types/lodash": "^4.14.201",
     "eslint": "^8.53.0",
+    "fs-extra": "^11.2.0",
     "prettier": "^3.0.3",
     "rollup": "^4.5.0",
     "rollup-plugin-alias": "^2.2.0",
@@ -67,8 +70,5 @@
     "rollup-plugin-node-externals": "^6.1.2",
     "tsc-alias": "^1.8.8",
     "typescript": "5.1"
-  },
-  "peerDependencies": {
-    "lodash": "^4.17.21"
   }
 }
